force-app/main/default/objects/Center__c/Center__c.object-meta.xml
<CustomObject>
    <label>Center</label>
    <nameField>
        <label>Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>