force-app/main/default/objects/Center__c/fields/BUILT_UP_AREA_Sqm__c.field-meta.xml
<CustomField>
    <fullName>BUILT_UP_AREA_Sqm__c</fullName>
    <label>Built Up Area Sqm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>