force-app/main/default/objects/Center__c/fields/Center_Full_ID__c.field-meta.xml
<CustomField>
    <fullName>Center_Full_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Center Full ID</label>
    <type>Text</type>
</CustomField>