force-app/main/default/objects/Center__c/fields/Dashboard_Link__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Link__c</fullName>
    <label>Dashboard Link</label>
    <type>Url</type>
</CustomField>