force-app/main/default/objects/Center__c/fields/PLOT_AREA_Sqm__c.field-meta.xml
<CustomField>
    <fullName>PLOT_AREA_Sqm__c</fullName>
    <label>Plot Area Sqm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>