force-app/main/default/objects/Center__c/fields/TOTAL_LEASABLE_AREA_Sqm__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_LEASABLE_AREA_Sqm__c</fullName>
    <label>Total Leasable Area Sqm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>