force-app/main/default/objects/Center__c/fields/Unit_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Record_Type__c</fullName>
    <label>Unit Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offices</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Standard Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>