force-app/main/default/objects/Center__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unit_Record_Type__c</columns>
    <columns>Project_Title__c</columns>
    <columns>Location__c</columns>
    <columns>Dashboard_Link__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>